build: ensure JMH opens the right modules too